packages/cashc/test/compiler/InvalidParameterTypeError/locking_bytecode_nulldata_string.cash
pragma cashscript ^0.6.0;

contract P2PKH() {
    function spend() {
        require(tx.outputs[0].lockingBytecode == new LockingBytecodeNullData(["Hello world"]));
    }
}
